# owl2

./: CMakeLists.txt
owl/: CMakeLists.txt  export.hpp  optional.hpp  variant.hpp
owl/color/: channel_traits.hpp  color.hpp  color_conversion.hpp  color_maps.hpp  color_names.cpp  color_names.hpp  gamma_correction.cpp  gamma_correction.hpp
owl/image/: image.hpp  image_io.cpp  image_io.hpp
owl/io/: off.cpp  off.hpp  ply.cpp  ply.hpp
owl/math/: angle.hpp  approx.hpp  constants.hpp  euler_angles.hpp  interval.hpp  line_segment.hpp  matrix.hpp  mesh.hpp  mesh_io.hpp  mesh_primitives.hpp  mesh_triangulation.hpp  nplane.hpp  physical_properties.hpp  quaternion.hpp  ray.hpp  rigid_transformation.hpp  trafos.hpp  triangle.hpp  utils.hpp
owl/utils/: adjacent_iterator.hpp  buffer.cpp  buffer.hpp  container_utils.hpp  count_iterator.hpp  dynamic_properties.hpp  file_utils.cpp  file_utils.hpp  filter_iterator.hpp  handle.hpp  hash_utils.hpp  iterator_range.hpp  lin_space.hpp  linear_index.hpp  map_iterator.hpp  non_copyable.hpp  random_utils.hpp  range_algorithm.hpp  step_iterator.hpp  stop_watch.cpp  stop_watch.hpp  template_utils.hpp
tests/: CMakeLists.txt  main.cpp
tests/color/: color.cpp  color_maps.cpp
tests/image/: image.cpp
tests/math/: angle.cpp  interval.cpp  matrix.cpp  mesh.cpp  nplane.cpp  quaternion.cpp  ray.cpp
tests/utils/: count_iterator.cpp  filter_iterator.cpp  handle.cpp  linear_index.cpp  map_iterator.cpp  non_copyable.cpp  stop_watch.cpp
