add_library(owl SHARED
        color/channel_traits.hpp
        color/color.hpp
        color/color_conversion.hpp
        color/color_maps.hpp
        color/color_names.hpp
        color/color_names.cpp
        color/gamma_correction.hpp
        color/gamma_correction.cpp
        image/image_io.hpp
        image/image_io.cpp
        io/off.cpp
        io/off.hpp
        io/ply.cpp
        io/ply.hpp
        math/angle.hpp
        math/approx.hpp
        math/constants.hpp
        math/euler_angles.hpp
        math/interval.hpp
        math/line_segment.hpp
        math/matrix.hpp
        math/mesh.hpp
        math/mesh_io.hpp
        math/mesh_primitives.hpp
        math/mesh_triangulation.hpp
        math/nplane.hpp
        math/physical_properties.hpp
        math/quaternion.hpp
        math/ray.hpp
        math/rigid_transformation.hpp
        math/trafos.hpp
        math/triangle.hpp
        math/utils.hpp
        utils/adjacent_iterator.hpp
        utils/buffer.cpp
        utils/buffer.hpp
        utils/container_utils.hpp
        utils/count_iterator.hpp
        utils/dynamic_properties.hpp
        utils/file_utils.cpp
        utils/file_utils.hpp
        utils/filter_iterator.hpp
        utils/handle.hpp
        utils/hash_utils.hpp
        utils/iterator_range.hpp
        utils/linear_index.hpp
        utils/map_iterator.hpp
        utils/non_copyable.hpp
        utils/random_utils.hpp
        utils/range_algorithm.hpp
        utils/step_iterator.hpp
        utils/stop_watch.hpp
        utils/stop_watch.cpp
        utils/template_utils.hpp
        export.hpp
        optional.hpp
        variant.hpp utils/lin_space.hpp ../thirdparty/variant/variant.hpp image/image.hpp)
target_include_directories(owl PUBLIC $(PROJECT_SOURCE_DIR)/..)


